--- a/src/app/dashboard/manter-evento/salvar/salvar.component.css
+++ b/src/app/dashboard/manter-evento/salvar/salvar.component.css
@@ -3,3 +3,37 @@
     flex-direction: column;
     margin: .5rem;
 }
+
+.upload-drop-zone {
+    height: 100px;
+    border-width: 2px;
+    margin-bottom: 20px;
+    color: #d9d9d9;
+    border-style: dashed;
+    border-color: #d9d9d9;
+    line-height: 100px;
+    text-align: center;
+}
+  
+.upload-drop-zone.drop {
+    color: #13294b;
+    border-color: #13294b;
+}
+.upload-drop-zone.drop {
+    .dropzone-link {
+        color: #d9d9d9;
+    }
+}
+
+.dropzone-link {
+    cursor: pointer;
+    color: #13294b;
+}
+
+.list-group-item {
+    padding: .1em .5em;
+}
+
+.list-group-item .float-right {
+    cursor: pointer;
+}
