Implementação dos services e das mensagens de notificações

--- a/src/app/dashboard/dashboard.component.html
+++ b/src/app/dashboard/dashboard.component.html
@@ -1,4 +1,4 @@
-<mat-drawer-container class="container" autosize>
+<mat-drawer-container class="drawer-container" autosize>
 
     <mat-drawer #drawer class="sidenav" mode="side">
         <navegacao></navegacao>
