--- a/src/app/dashboard/manter-categoria/manter-categoria.component.html
+++ b/src/app/dashboard/manter-categoria/manter-categoria.component.html
@@ -1,5 +1,5 @@
 <mat-card class="card-table">
-    <table mat-table [dataSource]="dataSource" matSort class="mat-elevation-z8">
+    <table mat-table [dataSource]="categorias" matSort class="mat-elevation-z8">
 
         <!-- NOME -->
         <ng-container matColumnDef="nome">
