--- a/src/app/dashboard/manter-evento/salvar/salvar.component.html
+++ b/src/app/dashboard/manter-evento/salvar/salvar.component.html
@@ -8,6 +8,15 @@
     </mat-form-field>
 
     <mat-form-field>
+        <mat-label>Categoria</mat-label>
+        <mat-select>
+            <mat-option *ngFor="let categoria of categorias" [value]="categoria.codigo">
+                {{categoria.nome}}
+            </mat-option>
+        </mat-select>
+    </mat-form-field>
+
+    <mat-form-field>
         <textarea matInput placeholder="Apresentação" formControlName="apresentacao"></textarea>
     </mat-form-field>
 
@@ -24,6 +33,7 @@
     </mat-form-field>
 
     <div class="col-12">
+        <label>Imagem</label>
         <input type="file" accept="image/jpeg" #fileinput style="display: none;"
             (change)="onDrop(fileinput.files); fileinput.value = ''">
 
@@ -41,4 +51,5 @@
             </li>
         </ul>
     </div>
+    <button mat-raised-button color="primary" (click)="salvar()">Salvar</button>
 </mat-card>
