Services no manter eventos

--- a/src/app/dashboard/manter-evento/manter-evento.component.html
+++ b/src/app/dashboard/manter-evento/manter-evento.component.html
@@ -1,6 +1,7 @@
 <mat-card class="card-table">
-    <table mat-table [dataSource]="eventos" matSort class="mat-elevation-z8">
+    <mat-card-title>Evento</mat-card-title>
 
+    <table mat-table [dataSource]="eventos" matSort class="mat-elevation-z8">
         <!-- TITULO -->
         <ng-container matColumnDef="titulo">
             <th mat-header-cell *matHeaderCellDef mat-sort-header> Titulo </th>
