--- a/src/app/dashboard/manter-evento/salvar/salvar.component.html
+++ b/src/app/dashboard/manter-evento/salvar/salvar.component.html
@@ -1,4 +1,6 @@
 <mat-card class="card-form" [formGroup]="formulario">
+    <mat-card-title>Evento</mat-card-title>
+
     <mat-form-field>
         <input matInput placeholder="Titulo" formControlName="titulo">
     </mat-form-field>
