--- a/src/app/dashboard/manter-categoria/salvar/salvar.component.html
+++ b/src/app/dashboard/manter-categoria/salvar/salvar.component.html
@@ -1,4 +1,6 @@
 <mat-card class="card-form" [formGroup]="formulario">
+    <mat-card-title>Categoria</mat-card-title>
+
     <mat-form-field>
         <input matInput placeholder="Nome" formControlName="nome">
     </mat-form-field>
